{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 52,
  "lineage": "e9e96ab1-af7e-520f-71c7-45bde0c9faf7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ly_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-073772da5ec4fdc53",
            "arn": "arn:aws:ec2:us-east-1:992382545251:elastic-ip/eipalloc-073772da5ec4fdc53",
            "association_id": "eipassoc-0380026c92e793148",
            "domain": "vpc",
            "id": "eipalloc-073772da5ec4fdc53",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0af5c1c49a2ecb0fd",
            "private_dns": "ip-10-0-1-236.ec2.internal",
            "private_ip": "10.0.1.236",
            "public_dns": "ec2-100-28-189-13.compute-1.amazonaws.com",
            "public_ip": "100.28.189.13",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "ly-statuspage-nat-eip"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "ly-statuspage-nat-eip",
              "Prefix": "ly-",
              "Project": "statuspage"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ly_igw",
            "aws_vpc.ly_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0e95a5e2743ec9ec9",
            "arn": "arn:aws:ec2:us-east-1:992382545251:instance/i-03bd94a812abc16de",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03bd94a812abc16de",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "yuvalyhome",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-007ffd6c6d5abee42"
              }
            ],
            "primary_network_interface_id": "eni-007ffd6c6d5abee42",
            "private_dns": "ip-10-0-1-176.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.176",
            "public_dns": "ec2-98-86-117-45.compute-1.amazonaws.com",
            "public_ip": "98.86.117.45",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:992382545251:key/d7ed977a-7a0d-424f-bfd2-14009d305288",
                "tags_all": {
                  "Environment": "prod",
                  "ManagedBy": "terraform",
                  "Prefix": "ly-",
                  "Project": "statuspage"
                },
                "throughput": 125,
                "volume_id": "vol-0421b8da6f6b31c79",
                "volume_size": 25,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-000725ca2394c1534",
            "tags": {
              "Name": "ly-statuspage-jenkins"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "ly-statuspage-jenkins",
              "Prefix": "ly-",
              "Project": "statuspage"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0542bf8cc64504a63"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.jenkins_sg",
            "aws_subnet.ly_public_subnet",
            "aws_vpc.ly_vpc",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ly_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382545251:internet-gateway/igw-07f981b5bff7962e5",
            "id": "igw-07f981b5bff7962e5",
            "owner_id": "992382545251",
            "region": "us-east-1",
            "tags": {
              "Name": "ly-statuspage-igw"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "ly-statuspage-igw",
              "Prefix": "ly-",
              "Project": "statuspage"
            },
            "vpc_id": "vpc-0be0c3ad5517fa4bb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ly_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ly_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:992382545251:loadbalancer/app/ly-statuspage-alb/c4c218a87489e8d4",
            "arn_suffix": "app/ly-statuspage-alb/c4c218a87489e8d4",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ly-statuspage-alb-1958170209.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:992382545251:loadbalancer/app/ly-statuspage-alb/c4c218a87489e8d4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ly-statuspage-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-01d1fc6c071ad3a94"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-000725ca2394c1534"
              },
              {
                "subnet_id": "subnet-07b00cfb3d9467832"
              }
            ],
            "subnets": [
              "subnet-000725ca2394c1534",
              "subnet-07b00cfb3d9467832"
            ],
            "tags": {
              "Name": "ly-statuspage-alb"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "ly-statuspage-alb",
              "Prefix": "ly-",
              "Project": "statuspage"
            },
            "vpc_id": "vpc-0be0c3ad5517fa4bb",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:992382545251:loadbalancer/app/ly-statuspage-alb/c4c218a87489e8d4"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.ly_public_subnet",
            "aws_vpc.ly_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ly_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:992382545251:listener/app/ly-statuspage-alb/c4c218a87489e8d4/65b6f9fb934e126e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:992382545251:targetgroup/ly-statuspage-tg/57056a937b091953",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:992382545251:listener/app/ly-statuspage-alb/c4c218a87489e8d4/65b6f9fb934e126e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:992382545251:loadbalancer/app/ly-statuspage-alb/c4c218a87489e8d4",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Prefix": "ly-",
              "Project": "statuspage"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:992382545251:listener/app/ly-statuspage-alb/c4c218a87489e8d4/65b6f9fb934e126e"
          },
          "dependencies": [
            "aws_lb.ly_alb",
            "aws_lb_target_group.ly_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.ly_public_subnet",
            "aws_vpc.ly_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ly_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:992382545251:targetgroup/ly-statuspage-tg/57056a937b091953",
            "arn_suffix": "targetgroup/ly-statuspage-tg/57056a937b091953",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:992382545251:targetgroup/ly-statuspage-tg/57056a937b091953",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ly-statuspage-tg",
            "port": 30080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "ly-statuspage-tg"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "ly-statuspage-tg",
              "Prefix": "ly-",
              "Project": "statuspage"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0be0c3ad5517fa4bb"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:992382545251:targetgroup/ly-statuspage-tg/57056a937b091953"
          },
          "dependencies": [
            "aws_vpc.ly_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ly_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-073772da5ec4fdc53",
            "association_id": "eipassoc-0380026c92e793148",
            "connectivity_type": "public",
            "id": "nat-014d983d39c1dcfa0",
            "network_interface_id": "eni-0af5c1c49a2ecb0fd",
            "private_ip": "10.0.1.236",
            "public_ip": "100.28.189.13",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-000725ca2394c1534",
            "tags": {
              "Name": "ly-statuspage-nat"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "ly-statuspage-nat",
              "Prefix": "ly-",
              "Project": "statuspage"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.ly_nat_eip",
            "aws_internet_gateway.ly_igw",
            "aws_subnet.ly_public_subnet",
            "aws_vpc.ly_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ly_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382545251:route-table/rtb-07bb83ff58e3a0965",
            "id": "rtb-07bb83ff58e3a0965",
            "owner_id": "992382545251",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-014d983d39c1dcfa0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ly-statuspage-private-rt-1"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "ly-statuspage-private-rt-1",
              "Prefix": "ly-",
              "Project": "statuspage"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be0c3ad5517fa4bb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382545251",
            "id": "rtb-07bb83ff58e3a0965",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.ly_nat_eip",
            "aws_internet_gateway.ly_igw",
            "aws_nat_gateway.ly_nat",
            "aws_subnet.ly_public_subnet",
            "aws_vpc.ly_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382545251:route-table/rtb-02834ad0879a6f89b",
            "id": "rtb-02834ad0879a6f89b",
            "owner_id": "992382545251",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-014d983d39c1dcfa0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ly-statuspage-private-rt-2"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "ly-statuspage-private-rt-2",
              "Prefix": "ly-",
              "Project": "statuspage"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be0c3ad5517fa4bb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382545251",
            "id": "rtb-02834ad0879a6f89b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.ly_nat_eip",
            "aws_internet_gateway.ly_igw",
            "aws_nat_gateway.ly_nat",
            "aws_subnet.ly_public_subnet",
            "aws_vpc.ly_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ly_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382545251:route-table/rtb-0481c625078ee3fdb",
            "id": "rtb-0481c625078ee3fdb",
            "owner_id": "992382545251",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07f981b5bff7962e5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ly-statuspage-public-rt"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "ly-statuspage-public-rt",
              "Prefix": "ly-",
              "Project": "statuspage"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be0c3ad5517fa4bb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382545251",
            "id": "rtb-0481c625078ee3fdb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.ly_igw",
            "aws_vpc.ly_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ly_private_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c9cd2a0f153033c",
            "region": "us-east-1",
            "route_table_id": "rtb-07bb83ff58e3a0965",
            "subnet_id": "subnet-07f7d391e376d4fd3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.ly_nat_eip",
            "aws_internet_gateway.ly_igw",
            "aws_nat_gateway.ly_nat",
            "aws_route_table.ly_private_rt",
            "aws_subnet.ly_private_subnet",
            "aws_subnet.ly_public_subnet",
            "aws_vpc.ly_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b146b54d2fa91641",
            "region": "us-east-1",
            "route_table_id": "rtb-02834ad0879a6f89b",
            "subnet_id": "subnet-0595d117f04a370c1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.ly_nat_eip",
            "aws_internet_gateway.ly_igw",
            "aws_nat_gateway.ly_nat",
            "aws_route_table.ly_private_rt",
            "aws_subnet.ly_private_subnet",
            "aws_subnet.ly_public_subnet",
            "aws_vpc.ly_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ly_public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-030cc7e623bad3423",
            "region": "us-east-1",
            "route_table_id": "rtb-0481c625078ee3fdb",
            "subnet_id": "subnet-000725ca2394c1534"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ly_igw",
            "aws_route_table.ly_public_rt",
            "aws_subnet.ly_public_subnet",
            "aws_vpc.ly_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e5a20c3ff190075",
            "region": "us-east-1",
            "route_table_id": "rtb-0481c625078ee3fdb",
            "subnet_id": "subnet-07b00cfb3d9467832"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ly_igw",
            "aws_route_table.ly_public_rt",
            "aws_subnet.ly_public_subnet",
            "aws_vpc.ly_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382545251:security-group/sg-01d1fc6c071ad3a94",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01d1fc6c071ad3a94",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ly-statuspage-alb-20250904092806671000000001",
            "name_prefix": "ly-statuspage-alb-",
            "owner_id": "992382545251",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ly-statuspage-alb-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "ly-statuspage-alb-sg",
              "Prefix": "ly-",
              "Project": "statuspage"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be0c3ad5517fa4bb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382545251",
            "id": "sg-01d1fc6c071ad3a94",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.ly_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382545251:security-group/sg-033cf5a76ba7f7833",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-033cf5a76ba7f7833",
            "ingress": [],
            "name": "ly-statuspage-eks-cluster-20250904075001138300000001",
            "name_prefix": "ly-statuspage-eks-cluster-",
            "owner_id": "992382545251",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ly-statuspage-eks-cluster-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "ly-statuspage-eks-cluster-sg",
              "Prefix": "ly-",
              "Project": "statuspage"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be0c3ad5517fa4bb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382545251",
            "id": "sg-033cf5a76ba7f7833",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.ly_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382545251:security-group/sg-04988b89880cc5f08",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04988b89880cc5f08",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 30080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01d1fc6c071ad3a94"
                ],
                "self": false,
                "to_port": 30080
              },
              {
                "cidr_blocks": [],
                "description": null,
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": null,
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-033cf5a76ba7f7833"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "ly-statuspage-eks-nodes-20250904075005802100000004",
            "name_prefix": "ly-statuspage-eks-nodes-",
            "owner_id": "992382545251",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ly-statuspage-eks-nodes-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "ly-statuspage-eks-nodes-sg",
              "Prefix": "ly-",
              "Project": "statuspage"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be0c3ad5517fa4bb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382545251",
            "id": "sg-04988b89880cc5f08",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.eks_cluster_sg",
            "aws_vpc.ly_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elasticache_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382545251:security-group/sg-06846e3e21393e2b9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06846e3e21393e2b9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04988b89880cc5f08"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "ly-statuspage-redis-20250904092813567400000002",
            "name_prefix": "ly-statuspage-redis-",
            "owner_id": "992382545251",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ly-statuspage-redis-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "ly-statuspage-redis-sg",
              "Prefix": "ly-",
              "Project": "statuspage"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be0c3ad5517fa4bb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382545251",
            "id": "sg-06846e3e21393e2b9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.eks_cluster_sg",
            "aws_security_group.eks_nodes_sg",
            "aws_vpc.ly_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382545251:security-group/sg-0542bf8cc64504a63",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0542bf8cc64504a63",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "ly-statuspage-jenkins-20250904075001140700000002",
            "name_prefix": "ly-statuspage-jenkins-",
            "owner_id": "992382545251",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ly-statuspage-jenkins-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "ly-statuspage-jenkins-sg",
              "Prefix": "ly-",
              "Project": "statuspage"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be0c3ad5517fa4bb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382545251",
            "id": "sg-0542bf8cc64504a63",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.ly_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ly_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382545251:security-group/sg-0a3ed283d04b6bb90",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a3ed283d04b6bb90",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04988b89880cc5f08"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "ly-statuspage-db-20250904075010270500000005",
            "name_prefix": "ly-statuspage-db-",
            "owner_id": "992382545251",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ly-statuspage-db-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "ly-statuspage-db-sg",
              "Prefix": "ly-",
              "Project": "statuspage"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be0c3ad5517fa4bb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382545251",
            "id": "sg-0a3ed283d04b6bb90",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.eks_cluster_sg",
            "aws_security_group.eks_nodes_sg",
            "aws_vpc.ly_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ly_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382545251:subnet/subnet-07f7d391e376d4fd3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f7d391e376d4fd3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382545251",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "ly-statuspage-private-subnet-1"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "ly-statuspage-private-subnet-1",
              "Prefix": "ly-",
              "Project": "statuspage"
            },
            "vpc_id": "vpc-0be0c3ad5517fa4bb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382545251",
            "id": "subnet-07f7d391e376d4fd3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.ly_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382545251:subnet/subnet-0595d117f04a370c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0595d117f04a370c1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382545251",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "ly-statuspage-private-subnet-2"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "ly-statuspage-private-subnet-2",
              "Prefix": "ly-",
              "Project": "statuspage"
            },
            "vpc_id": "vpc-0be0c3ad5517fa4bb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382545251",
            "id": "subnet-0595d117f04a370c1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.ly_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ly_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382545251:subnet/subnet-000725ca2394c1534",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-000725ca2394c1534",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382545251",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "ly-statuspage-public-subnet-1",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "ly-statuspage-public-subnet-1",
              "Prefix": "ly-",
              "Project": "statuspage",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0be0c3ad5517fa4bb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382545251",
            "id": "subnet-000725ca2394c1534",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.ly_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382545251:subnet/subnet-07b00cfb3d9467832",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b00cfb3d9467832",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382545251",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "ly-statuspage-public-subnet-2",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "ly-statuspage-public-subnet-2",
              "Prefix": "ly-",
              "Project": "statuspage",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0be0c3ad5517fa4bb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382545251",
            "id": "subnet-07b00cfb3d9467832",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.ly_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ly_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382545251:vpc/vpc-0be0c3ad5517fa4bb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09779e27723f7e74f",
            "default_route_table_id": "rtb-03bbf840cac1b905b",
            "default_security_group_id": "sg-0fb7af61376e68799",
            "dhcp_options_id": "dopt-0c7c69517f17e01b7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0be0c3ad5517fa4bb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03bbf840cac1b905b",
            "owner_id": "992382545251",
            "region": "us-east-1",
            "tags": {
              "Name": "ly-statuspage-vpc"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "ly-statuspage-vpc",
              "Prefix": "ly-",
              "Project": "statuspage"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}